--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 Email.send({
                     Host : "smtp.gmail.com",
                     Username : "marufarocean@gmail.com",
-                    Password : "Masseffect301796294871",
+                    Password : "yourpassword",
                     To : 'crysis2ocean@gmail.com',
                     From : document.getElementById("email").value,
                     Subject : "New enquiry",
