--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         better and to drive continuous improvements across a range of work activities. Currently looking to
                         join a suitable organization that rewards hard work and offers good opportunities for career
                         development.</p>
-                    <a href="https://drive.google.com/file/d/1VXVsVImQqgWbNuN84-t8MTXYHVnZl_Ko/view?usp=sharing">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1mZaH_cXE595d36POhhqvrzALevDtP74n/view">Download CV</a>
                 </div>
             </div>
         </div>
